syntax = "proto3";
option go_package = "gitlab.com/beneath-org/beneath/engine/proto";
package engine;

import "gateway/grpc/proto/gateway.proto";

message WriteRequest {
  bytes write_id = 1;
  bytes instance_id = 2;
  repeated gateway.v1.Record records = 3;
}

message WriteReport {
  bytes write_id = 1;
  bytes instance_id = 2;
  int32 records_count = 3;
  int32 bytes_total = 4;
}
